# blog

./: .gitignore  LICENSE
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml
client/src/: App.vue
client/src/assets/: base.css  main.css
client/src/common/: router.js
client/src/components/: RichTextEditor.vue
client/src/views/: Detail.vue  HomePage.vue  Login.vue  NotFound.vue
client_old/: package.json
client_old/src/: main.js
client_old/src/assets/: main.css
client_old/src/stores/: AdminStore.js
client_old/src/views/: HomePage.vue  Login.vue
server_golang/: .air.toml  go.mod  go.sum  main.go
server_golang/config/: config.yml
server_golang/controller/: blog.go  category.go  login.go
server_golang/middleware/: auth.go  cors.go
server_golang/model/: orm.go
server_golang/router/: register.go
server_golang/utils/: db.go  idgenerator.go  jwt.go
server_python/blog/: README.md  db.sqlite3  pyproject.toml
server_python/blog/blog/: settings.py  urls.py
server_python/blog/idgenerator/: generator.py  idregister.py  options.py  snowflake.py  snowflake_m1.py
server_python/blog/login/: auth.py  models.py  serializers.py  views.py
server_python/blog/login/migrations/: 0001_initial.py  0002_userinfo_delete_admin.py
server_python/blog/myblog/: apps.py  models.py  serializers.py  urls.py  views.py
server_python/blog/myblog/migrations/: 0001_initial.py  0002_blog.py
server_python/blog/sers/: models.py  serializers.py  views.py
server_python/blog/sers/migrations/: 0001_initial.py
server_python/blog/utils/: id_util.py
(+9 files in other folders)
